--- a/ecoCounterpart.html
+++ b/ecoCounterpart.html
@@ -18,6 +18,17 @@
                 <th>真无线耳机</th>
                 <th>智能手表</th>
             </tr>
+            <!-- <tr class="item_title">
+                <th> </th>
+                <th>型号</th>
+                <th>价格</th>
+                <th>型号</th>
+                <th>价格</th>
+                <th>型号</th>
+                <th>价格</th>
+                <th>型号</th>
+                <th>价格</th>
+            </tr> -->
         </thead>
 
         <tbody>
