--- a/htmlPrc.html
+++ b/htmlPrc.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>HTML Practice</title>
-        <link rel="stylesheet" href="CSSPrc.css">
-    </head>
 
-    <body>
+  <head>
+    <meta charset="utf-8">
+    <title>CSS tables example</title>
+    <link rel="stylesheet" href="CSSPrc.css">
+  </head>
 
-    </body>
+  <body>
+    <form>
+    <p>First of all, tell us your name and age.</p>
+      <div>
+        <label for="fname">First name:</label>
+        <input type="text" id="fname">
+      </div>
+      <div>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname">
+      </div>
+      <div>
+        <label for="age">Age:</label>
+        <input type="text" id="age">
+      </div>
+    </form>
+  </body>
+  
 </html>
