--- a/web examples/shoppingList.html
+++ b/web examples/shoppingList.html
@@ -74,27 +74,16 @@
         verse = verse.replace(" ", "");
         verse = verse.toLowerCase();
         let url = verse + '.txt';
+      }
 
-        // realized by XMLHttpRequest
-        // let request = new XMLHttpRequest();
-        // request.open('GET', url);
-        // request.responseText = 'text'; //defaultly return text
+      let request = new XMLHttpRequest();
+      request.open('GET', url);
+      request.responseText = 'text';
 
-        // request.onload = function() {
-        //   poemDisplay.textContent = request.response;
-        // }
-
-        // request.send();
-
-        // realized by fetch
-        // url -> response(file) -> file.text()(pure text) ->
-        // set .textContent = text
-        fetch(url).then(function(response) {
-          response.text().then(function(text) {
-            poemDisplay.textContent = text;
-          })
-        })
-      };
+      request.onload = function() {
+        poemDisplay.textContent = request.response;
+      }
+      request.send();
 
       updateDisplay('Verse 1');
       verseChoose.value = 'Verse 1';
