--- a/web examples/start_finished/index.html
+++ b/web examples/start_finished/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>弹球</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
+    <script src="main - 副本.js" defer></script>
+    <!-- <script src="main.js" defer></script> -->
   </head>
 
   <body>
     <h1>弹球</h1>
+    <p>还剩 <span>多少</span> 个球</p>
     <canvas></canvas>
   </body>
 </html>
